# odysseus

./: .pre-commit-config.yaml  AGENTS.md  pyproject.toml  requirements.txt
.github/: _demo-2099.txt  _demo-demo-pr-fail.txt  _demo-demo-pr-pass.txt  desc-check-test.txt  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/scripts/: check-issue-description.js  check-pr-description.js  check-pr-title.js
.github/scripts/lib/: comment.js  labels.js  markdown.js  pr-type.js
.github/workflows/: issue-description-check.yml  pr-description-check.yml  pr-title-check.yml  triage.yml
core/: database.py
docs/: architecture.md  current-architecture.md  proposed-architecture.md  type-checking-backlog.md
docs/adr/: 000-template.md  001-backend-layer-conventions.md  002-vite-over-nextjs.md  003-pnpm-over-npm.md  004-openapi-typescript-for-api-types.md  005-tanstack-router-over-react-router.md  006-zustand-over-redux.md  007-biome-over-eslint-prettier.md  008-shadcn-ui-component-model.md  009-uv-over-pip.md  010-ruff-over-flake8-black.md  011-basedpyright-for-type-checking.md  012-sqlite-no-alembic.md  013-context-md-and-agents-md-structure.md  014-tanstack-query-for-server-state.md  015-nuqs-for-url-state.md  016-dev-main-branching-strategy.md  017-testing-strategy.md  018-dependency-governance.md  019-platform-boundary-layer.md  020-auth-and-session-handling.md  021-security-baseline.md  022-api-design-conventions.md  023-background-task-patterns.md  024-error-handling.md
routes/: calendar_routes.py  prefs_routes.py
src/: caldav_sync.py
static/js/: settings.js
